// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compress - gh > clean body - no noise, passes through verbatim (modulo trim) 1`] = `
"## What changed

Refactored the config loader so required keys are validated at startup
instead of lazily on first access.

### Why

Late validation made misconfigured deploys fail deep inside a request
handler, which was painful to debug.

### Testing

- Ran the full unit suite locally
- Added a regression test for the missing-key path
- Verified the staging deploy boots cleanly"
`;

exports[`compress - gh > empty output - nothing to compress, stays empty 1`] = `""`;

exports[`compress - gh > issue body - drops single-line HTML comments, keeps prose 1`] = `
"## Description

Fixes the flaky retry logic in the uploader.

The retry now uses exponential backoff with jitter and a capped ceiling."
`;

exports[`compress - gh > pr view - drops ---/***/___ horizontal rules and collapses blank runs 1`] = `
"## Notes

First section of notes.

Second section, after a long run of blank lines.

Third section, after a dashed rule.

Fourth section, after an asterisk rule.

Fifth section, after an underscore rule."
`;

exports[`compress - gh > pr view - noise inside a \`\`\` fence is preserved while identical noise outside is stripped 1`] = `
"The failing workflow config, quoted verbatim:

\`\`\`yaml
# CI pipeline
---
name: ci
<!-- inside the fence, this comment must survive -->
***
![not really an image](inside-fence.png)
on:
  push:
    branches: [main]
\`\`\`
Everything above is quoted exactly from the file."
`;

exports[`compress - gh > pr view - strips every noise type (comments, badges, images, rules, blanks) but keeps the code fence 1`] = `
"# Add configurable server port

## Summary

This PR makes the listening port configurable via \`config.port\`, falling back
to 3000 when the key is absent, so no existing deployment changes behavior.

## Screenshot

## Example

\`\`\`ts
const server = createServer(config)
server.listen(config.port ?? 3000)
\`\`\`
## Checklist

- [x] Tests added
- [x] Docs updated"
`;

exports[`compress - gh > pr view - strips image-only lines (screenshots), keeps surrounding text 1`] = `
"## Screenshots

Before and after the redesign:

The spacing is now consistent across every breakpoint."
`;

exports[`compress - gh > repo view - removes stacked badge lines, keeps the heading and tagline 1`] = `
"# widget

A tiny, dependency-free widget toolkit."
`;

exports[`compress - gh subcommands > api - a non-JSON body (jq raw output) is returned untouched 1`] = `
"# widget

A tiny, dependency-free widget toolkit."
`;

exports[`compress - gh subcommands > api - a release asset keeps its browser_download_url, the only field the call is for 1`] = `"{"tag_name":"v2.0.0","assets":[{"name":"widget-linux-x64.tar.gz","size":8123456,"browser_download_url":"https://github.com/acme/widget/releases/download/v2.0.0/widget-linux-x64.tar.gz"}]}"`;

exports[`compress - gh subcommands > api - drops _links / node_id noise keys, keeps the payload, stays valid JSON 1`] = `"{"id":212613049,"name":"widget","full_name":"acme/widget","private":false,"owner":{"login":"acme","id":59704711,"avatar_url":"https://avatars.githubusercontent.com/u/59704711?v=4","gravatar_id":"","url":"https://api.github.com/users/acme","html_url":"https://github.com/acme","followers_url":"https://api.github.com/users/acme/followers","following_url":"https://api.github.com/users/acme/following{/other_user}","gists_url":"https://api.github.com/users/acme/gists{/gist_id}","starred_url":"https://api.github.com/users/acme/starred{/owner}{/repo}","subscriptions_url":"https://api.github.com/users/acme/subscriptions","organizations_url":"https://api.github.com/users/acme/orgs","repos_url":"https://api.github.com/users/acme/repos","events_url":"https://api.github.com/users/acme/events{/privacy}","received_events_url":"https://api.github.com/users/acme/received_events","type":"Organization","site_admin":false},"html_url":"https://github.com/acme/widget","description":"A tiny, dependency-free widget toolkit","fork":false,"url":"https://api.github.com/repos/acme/widget","forks_url":"https://api.github.com/repos/acme/widget/forks","keys_url":"https://api.github.com/repos/acme/widget/keys{/key_id}","collaborators_url":"https://api.github.com/repos/acme/widget/collaborators{/collaborator}","hooks_url":"https://api.github.com/repos/acme/widget/hooks","issue_events_url":"https://api.github.com/repos/acme/widget/issues/events{/number}","events_url":"https://api.github.com/repos/acme/widget/events","created_at":"2019-10-03T15:32:00Z","updated_at":"2026-07-19T08:11:43Z","pushed_at":"2026-07-20T09:12:44Z","size":41822,"stargazers_count":38412,"watchers_count":38412,"language":"TypeScript","forks_count":6017,"open_issues_count":812,"license":{"key":"mit","name":"MIT License","spdx_id":"MIT","url":"https://api.github.com/licenses/mit"},"default_branch":"main","permissions":{"admin":false,"maintain":false,"push":false,"triage":false,"pull":true}}"`;

exports[`compress - gh subcommands > api - the *_url fields callers run \`gh api\` to OBTAIN are payload, not hypermedia noise 1`] = `"{"full_name":"acme/widget","html_url":"https://github.com/acme/widget","clone_url":"https://github.com/acme/widget.git","ssh_url":"git@github.com:acme/widget.git","default_branch":"main"}"`;

exports[`compress - gh subcommands > api --jq - an explicit projection is the caller's field list, so nothing is stripped from it 1`] = `"{"name":"widget","html_url":"https://github.com/acme/widget","node_id":"MDEwOlJlcG9zaXRvcnkyMTI2MTMwNDk="}"`;

exports[`compress - gh subcommands > api graphql - a caller-aliased node_id is the field that was asked for, not REST noise 1`] = `"{"data":{"repository":{"node_id":"R_kgDOAyz1uQ","name":"widget"}}}"`;

exports[`compress - gh subcommands > api graphql - every key is named by the caller's own query, so the response is left alone 1`] = `"{"data":{"repository":{"name":"widget","homepage_url":"https://acme.dev","releases":{"nodes":[{"tagName":"v1","release_url":"https://x/1"}]}}}}"`;

exports[`compress - gh subcommands > issue list - trailing columns that are empty or a timestamp on every row are dropped 1`] = `
"42	OPEN	Login button unresponsive on mobile
41	OPEN	Port option is ignored when config.json is absent
39	OPEN	Document the retry backoff ceiling"
`;

exports[`compress - gh subcommands > issue view --comments - keeps the first few comments and discloses how many were dropped 1`] = `
"title:	Login button unresponsive on mobile
state:	OPEN
author:	dana
labels:	bug, p1
comments:	5
number:	42
url:	https://github.com/acme/widget/issues/42
--
The login button does not respond to taps on iOS Safari 17.

--
author:	alice
association:	member
--
Reproduced on an iPhone 14, iOS 17.5.
--
author:	bob
association:	contributor
--
Looks like the tap target is 20px tall; the overlay swallows the event.
--
author:	carol
association:	member
--
Bumped the hit area to 44px in #43.
--
... +2 more comments (--full)"
`;

exports[`compress - gh subcommands > list - output that is not a tab-separated table is returned unchanged, never summarised 1`] = `"Showing 0 of 0 releases in acme/widget"`;

exports[`compress - gh subcommands > pr --repo o/r view - a global flag before the verb still resolves to the view condenser 1`] = `
"title:	feat: x
state:	OPEN
--
Body."
`;

exports[`compress - gh subcommands > pr checks - all green collapses to the rollup alone, with no failure list 1`] = `"[gh] 4 checks: 4 passed"`;

exports[`compress - gh subcommands > pr checks - rolls up to counts and relays the failing rows exactly as gh printed them, tabs intact 1`] = `
"[gh] 6 checks: 3 passed, 2 failed, 1 pending
test (18)	fail	2m3s	https://github.com/acme/widget/actions/runs/4812993017/job/13234567890
Vercel	fail	0	https://vercel.com/acme/widget/deployments/dpl_7Qk2	Deployment has failed"
`;

exports[`compress - gh subcommands > pr diff - a unified diff is condensed by the git diff condenser 1`] = `
"diff: 2 file(s)  +2 -1

── src/app.ts
-   server.listen(3000)
+   server.listen(config.port ?? 3000)

── README.md
+ Set \`config.port\` to change the listening port."
`;

exports[`compress - gh subcommands > pr diff --name-only - a bare path list is canonical xargs input and survives verbatim 1`] = `
"src/app.ts
src/handlers/gh.ts
test/handlers/gh.cases.test.ts
README.md"
`;

exports[`compress - gh subcommands > pr list - drops the trailing created-at column and keeps gh's TAB delimiter intact 1`] = `
"123	feat: configurable server port	feat/port	OPEN
118	fix: retry backoff jitter	fix/retry	OPEN
117	chore: bump vitest to 4.1	chore/vitest	DRAFT
110	docs: document the port option	docs/port	MERGED"
`;

exports[`compress - gh subcommands > pr list --json - a machine format stays byte-identical and parseable 1`] = `"[{"number":123,"state":"OPEN","title":"feat: configurable server port"},{"number":118,"state":"OPEN","title":"fix: retry backoff jitter"}]"`;

exports[`compress - gh subcommands > pr status - the human summary is not a checks table, so it is left alone 1`] = `
"Relevant pull requests in acme/widget

Current branch
  #123  feat: configurable server port [feat/port]
  - 1/4 checks failing

Created by you
  #118  fix: retry backoff jitter [fix/retry]
  ✓ Checks passing - Review required

Requesting a code review from you
  You have no pull requests to review"
`;

exports[`compress - gh subcommands > pr view - "author:" lines in the BODY are body text, not comments, so no comment count is invented 1`] = `
"title:	Add contributor metadata
state:	OPEN
number:	7
--
This PR adds the following records:

author:	alice
role:	lead
author:	bob
role:	dev
author:	carol
role:	dev
author:	dan
role:	dev
author:	erin
role:	qa

Please review."
`;

exports[`compress - gh subcommands > pr view - a body that QUOTES a thread verbatim is still body, so no comment count is invented 1`] = `
"title:	Import review transcript
state:	OPEN
--
Pasting the upstream discussion verbatim:

--
author:	alice
--
first
--
author:	bob
--
second
--
author:	carol
--
third
--
author:	dan
--
fourth

That is the whole transcript; please review."
`;

exports[`compress - gh subcommands > pr view - keeps the populated header fields, drops the ones gh emitted empty 1`] = `
"title:	feat: configurable server port
state:	OPEN
author:	alice
labels:	enhancement
reviewers:	carol (Approved), dave (Requested)
number:	123
url:	https://github.com/acme/widget/pull/123
additions:	120
deletions:	14
auto-merge:	disabled
--
## Summary

Makes the listening port configurable via \`config.port\`, falling back to 3000."
`;

exports[`compress - gh subcommands > pr view --comments - a quoted author line in the body does not move the body/thread boundary 1`] = `
"title:	Import review transcript
state:	OPEN
number:	7
--
Pasting the upstream discussion verbatim:

--
author:	alice
--
first

That is the whole transcript; please review.
--
author:	bob
association:	member
--
The transcript above is missing the last message.
--"
`;

exports[`compress - gh subcommands > pr view --comments - drops "edited" and a "none" status, keeps a real review verdict 1`] = `
"title:	feat: configurable server port
state:	OPEN
author:	alice
number:	123
url:	https://github.com/acme/widget/pull/123
--
Makes the listening port configurable via config.port.
--
author:	bob
association:	member
status:	changes requested
--
The fallback should be a named constant, not a literal 3000.
--
author:	carol
association:	contributor
--
Agreed, and the README needs the new key documented.
--"
`;

exports[`compress - gh subcommands > run list - a long list is capped without putting a marker in the row stream 1`] = `
"completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543210	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543211	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543212	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543213	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543214	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543215	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543216	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543217	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543218	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543219	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543220	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543221	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543222	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543223	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543224	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543225	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543226	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543227	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543228	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543229	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543230	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543231	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543232	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543233	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543234	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543235	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543236	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543237	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543238	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543239	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543240	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543241	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543242	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543243	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543244	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543245	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543246	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543247	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543248	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543249	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543250	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543251	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543252	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543253	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543254	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543255	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543256	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543257	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543258	1m23s
completed	success	fix: retry backoff jitter	CI	fix/retry	push	9876543259	1m23s"
`;

exports[`compress - gh subcommands > run list - an interior empty column is KEPT, so the fields behind it keep their index 1`] = `
"queued		feat: retry backoff jitter	CI	fix/retry	push	9876543210
queued		fix: strip the graph gutter	CI	fix/gutter	push	9876543211
queued		docs: handler reference	CI	docs/ref	push	9876543212"
`;

exports[`compress - gh subcommands > run view - the run summary is not the log grammar, so no step headers are invented 1`] = `
"X main CI · 4812993017
Triggered via push about 5 minutes ago

JOBS
X build in 1m26s (ID 13234567890)
  ✓ Set up job
  ✓ Checkout
  X Run tests
  ✓ Post Checkout
  ✓ Complete job

ANNOTATIONS
X Process completed with exit code 1.
build: .github#1

To see what failed, try: gh run view 4812993017 --log-failed
View this run on GitHub: https://github.com/acme/widget/actions/runs/4812993017"
`;

exports[`compress - gh subcommands > run view --log - drops the timestamp and the repeated job/step prefix, heading each new step once 1`] = `
"── build / Set up job
Current runner version: '2.317.0'
Operating System
Ubuntu
22.04.4
── build / Checkout
Run actions/checkout@v4
with:
  repository: acme/widget
Syncing repository: acme/widget
── build / Install dependencies
added 214 packages in 8s
── build / Run tests
> widget@2.0.0 test
> vitest run
FAIL test/handlers/gh.cases.test.ts
Tests  1 failed | 212 passed (213)
##[error]Process completed with exit code 1.
── build / Post Checkout
Post job cleanup.
── build / Complete job
Cleaning up orphan processes"
`;

exports[`compress - gh subcommands > run view --log - text that is not the log grammar is returned unchanged, never reshaped 1`] = `
"X main CI · 4812993017
Triggered via push about 5 minutes ago

JOBS
X build in 1m26s (ID 13234567890)
  ✓ Set up job
  ✓ Checkout
  X Run tests
  ✓ Post Checkout
  ✓ Complete job

ANNOTATIONS
X Process completed with exit code 1.
build: .github#1

To see what failed, try: gh run view 4812993017 --log-failed
View this run on GitHub: https://github.com/acme/widget/actions/runs/4812993017"
`;

exports[`compress - gh subcommands > run view --log - unwraps ##[group] and drops ##[endgroup], but keeps ##[error] 1`] = `
"── build / Set up job
Current runner version: '2.317.0'
Operating System
Ubuntu
22.04.4
── build / Checkout
Run actions/checkout@v4
with:
  repository: acme/widget
Syncing repository: acme/widget
── build / Install dependencies
added 214 packages in 8s
── build / Run tests
> widget@2.0.0 test
> vitest run
FAIL test/handlers/gh.cases.test.ts
Tests  1 failed | 212 passed (213)
##[error]Process completed with exit code 1.
── build / Post Checkout
Post job cleanup.
── build / Complete job
Cleaning up orphan processes"
`;

exports[`compress - gh subcommands > run view --log-failed - the failed-only log takes the same path as the full log 1`] = `
"── build / Run tests
FAIL test/handlers/gh.cases.test.ts
Tests  1 failed | 212 passed (213)
##[error]Process completed with exit code 1."
`;
